--- a/_config.yml
+++ b/_config.yml
@@ -3,17 +3,17 @@ remote_theme           : "mmistakes/minimal-mistakes"
 minimal_mistakes_skin    : "neon" # "air", "aqua", "contrast", "dark", "dirt", "neon", "mint", "plum", "sunrise"
 
 # Site Settings
-locale                   : "en-US"
-title                    : "Site Title"
+locale                   : "ko-KR"
+title                    : "Today I Learned"
 title_separator          : "-"
 subtitle                 : # site tagline that appears below site title in masthead
-name                     : "Your Name"
-description              : "An amazing website."
+name                     : "SMILE:D"
+description              : "Today I Learned"
 words_per_minute         : 200
 
 # Analytics
 analytics:
   provider               : google # false (default), "google", "google-universal", "custom"
   google:
-    tracking_id          : G-8CFXDBNXF1
+    tracking_id          : "G-8CFXDBNXF1"
     anonymize_ip         : # true, false (default)
