--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,7 @@
 
 theme                    : "minimal-mistakes-jekyll"
 # remote_theme           : "mmistakes/minimal-mistakes"
-minimal_mistakes_skin    : "neon" # "air", "aqua", "contrast", "dark", "dirt", "neon", "mint", "plum", "sunrise"
+minimal_mistakes_skin    : "contrast" # "air", "aqua", "contrast", "dark", "dirt", "neon", "mint", "plum", "sunrise"
 
 # Site Settings
 locale                   : "ko-KR"
@@ -94,7 +94,7 @@ analytics:
 # Site Author
 author:
   name             : "smailerrr"
-  avatar           : "/assets/myphoto.jpg" # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
+  avatar           : 
   bio              : "Analysis And Develop"
   location         : "Seoul, South Korea"
   email            : "ekxod12@gmail.com"
