--- a/_config.yml
+++ b/_config.yml
@@ -95,7 +95,7 @@ analytics:
 author:
   name             : "smailerrr"
   avatar           : 
-  bio              : "Analysis And Develop"
+  bio              : "Marketing and Analysis"
   location         : "Seoul, South Korea"
   email            : "ekxod12@gmail.com"
   github           : "smilerrr"
